[gd_scene load_steps=8 format=3 uid="uid://miyng6xfo4u2"]

[ext_resource type="Theme" uid="uid://bi2ve4mbgqqd0" path="res://fonts/Izayoi_Theme_setup.tres" id="1_e5j75"]
[ext_resource type="Script" uid="uid://ji4etic8rs41" path="res://scenes/GUI/MapSetup.gd" id="2_274cj"]
[ext_resource type="Texture2D" uid="uid://cep305fejecny" path="res://sprites/UI/player_flag.png" id="2_86641"]
[ext_resource type="FontFile" uid="uid://di48a300uqd6d" path="res://fonts/VenomMincho-DOOyR.ttf" id="4_5e33i"]
[ext_resource type="FontFile" uid="uid://b1ahq708k5luc" path="res://fonts/Rotunda/Rotunda.otf" id="4_n6pe2"]
[ext_resource type="FontFile" uid="uid://b4in3wjmpvqcv" path="res://fonts/NewRocker/new-rocker.regular.otf" id="5_ujh55"]
[ext_resource type="FontFile" uid="uid://ckgxohqlgjy7p" path="res://fonts/Quintessential/Quintessential.otf" id="5_vmj44"]

[node name="MapSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e5j75")
script = ExtResource("2_274cj")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 120.0
offset_top = -476.0
offset_right = 396.0
offset_bottom = 483.0
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
self_modulate = Color(0.0313726, 0.494118, 0.694118, 1)
layout_mode = 2
texture = ExtResource("2_86641")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="SetUpVbox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ChapterVbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/SetUpVbox"]
layout_mode = 2

[node name="ChapterHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/SetUpVbox/ChapterVbox"]
layout_mode = 2
alignment = 1

[node name="ChapterLb" type="Label" parent="PanelContainer/MarginContainer/SetUpVbox/ChapterVbox/ChapterHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.733333, 0.745098, 0.105882, 1)
theme_override_fonts/font = ExtResource("4_n6pe2")
theme_override_font_sizes/font_size = 28
text = "Chapter "
horizontal_alignment = 1

[node name="ChapterNumber" type="Label" parent="PanelContainer/MarginContainer/SetUpVbox/ChapterVbox/ChapterHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.733333, 0.745098, 0.105882, 1)
theme_override_fonts/font = ExtResource("5_vmj44")
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 1

[node name="Chapter Title" type="Label" parent="PanelContainer/MarginContainer/SetUpVbox/ChapterVbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ujh55")
theme_override_font_sizes/font_size = 20
text = "Chapter Title"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/SetUpVbox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="ConditionsBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/SetUpVbox"]
layout_mode = 2

[node name="ObjectiveVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/SetUpVbox/ConditionsBox"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_horizontal = 3

[node name="ObjLabel" type="Label" parent="PanelContainer/MarginContainer/SetUpVbox/ConditionsBox/ObjectiveVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.694118, 0.690196, 0.658824, 1)
text = "Clear Condition:"

[node name="LossBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/SetUpVbox/ConditionsBox"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2

[node name="ObjLabel" type="Label" parent="PanelContainer/MarginContainer/SetUpVbox/ConditionsBox/LossBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.694118, 0.690196, 0.658824, 1)
text = "Loss Condition:"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/SetUpVbox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="OptionsVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/SetUpVbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BTNDeploy" type="Button" parent="PanelContainer/MarginContainer/SetUpVbox/OptionsVBox"]
layout_mode = 2
mouse_filter = 1
text = "Deploy"

[node name="FrmBtn" type="Button" parent="PanelContainer/MarginContainer/SetUpVbox/OptionsVBox"]
layout_mode = 2
mouse_filter = 1
text = "Formation"

[node name="MngBtn" type="Button" parent="PanelContainer/MarginContainer/SetUpVbox/OptionsVBox"]
layout_mode = 2
mouse_filter = 1
text = "Manage"

[node name="StatusBtn" type="Button" parent="PanelContainer/MarginContainer/SetUpVbox/OptionsVBox"]
visible = false
layout_mode = 2
mouse_filter = 1
text = "Status"

[node name="BeginBtn" type="Button" parent="PanelContainer/MarginContainer/SetUpVbox/OptionsVBox"]
layout_mode = 2
mouse_filter = 1
text = "Begin"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/SetUpVbox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="MonVBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/SetUpVbox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MonLabel" type="Label" parent="PanelContainer/MarginContainer/SetUpVbox/MonVBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.745098, 0.745098, 0.745098, 1)
text = "Mon:"
vertical_alignment = 1

[node name="MonDenom" type="Label" parent="PanelContainer/MarginContainer/SetUpVbox/MonVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_5e33i")
theme_override_font_sizes/font_size = 30
text = "æ–‡"
horizontal_alignment = 2

[node name="MonCount" type="Label" parent="PanelContainer/MarginContainer/SetUpVbox/MonVBox"]
layout_mode = 2
text = "0000000"
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
